--- a/views/characters/index.html
+++ b/views/characters/index.html
@@ -38,14 +38,14 @@
                 <div class="amidala card">
                     <a href="padme_amidala.html">
                         <img src="../../images/characters/image_centpx/padme_admidala_resultatredimensionner.webp"
-                            alt="" />
+                           border="2px" alt="" />
                         <p>Amidala</p>
                     </a>
                 </div>
                 <div class="obiwan card">
                     <a href="obi-wan_kenobi.html">
                         <img src="../../images/characters/image_centpx/hobi_wan_resultatredimensionner.jpg"  
-                        border="2px" alt="" />
+                       border="2px"  alt="" />
                         <p>Obi-wan Kenobi</p>
                     </a>
                 </div>
@@ -217,14 +217,16 @@
 
                 <div class="taun card">
                     <a href="taun_we.html">
-                        <img src="../../images/characters/image_centpx/tawn_me_resultatredimensionner.jpg" border="2px" alt="" />
+                        <img src="../../images/characters/image_centpx/tawn_me_resultatredimensionner.jpg" 
+                        border="2px" alt="" />
                         <p>Taun Me</p>
                     </a>
                 </div>
 
                 <div class="dexter card">
                     <a href="dexter">
-                        <img src="../../images/characters/image_centpx/Dexter_resultatredimensionner.webp" alt="" border="2px" />
+                        <img src="../../images/characters/image_centpx/Dexter_resultatredimensionner.webp" 
+                        alt="" border="2px" />
                         <p>Dexter Jettster</p>
                     </a>
                 </div>
@@ -242,21 +244,24 @@
             <div class="list">
                 <div class="c3po card">
                     <a href="c-3po.html">
-                        <img src="../../images/characters/image_centpx/c3po_resultatredimensionner.jpg"   alt="" />
+                        <img src="../../images/characters/image_centpx/c3po_resultatredimensionner.jpg" 
+                         border="2px"  alt="" />
                         <p>C-3po</p>
                     </a>
                 </div>
 
                 <div class="r2d2 card">
                     <a href="r2-d2.html">
-                        <img src="../../images/characters/image_centpx/R2d2_resultatredimensionner.webp" alt=""  border="2px"/>
+                        <img src="../../images/characters/image_centpx/R2d2_resultatredimensionner.webp" 
+                        alt=""  border="2px"/>
                         <p>R2-D2</p>
                     </a>
                 </div>
 
                 <div class="yoda card">
                     <a href="yoda.html">
-                        <img src="../../images/characters/image_centpx/yoda_resultatredimensionner.webp" alt=""  border="2px"/>
+                        <img src="../../images/characters/image_centpx/yoda_resultatredimensionner.webp"
+                         alt=""  border="2px"/>
                         <p>Yoda</p>
                     </a>
                 </div>
@@ -271,21 +276,24 @@
 
                 <div class="chewbacca card">
                     <a href="chewbacca.html">
-                        <img src="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg" alt="" />
+                        <img src="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg" 
+                        border="2px" alt="" />
                         <p>Chewbacca</p>
                     </a>
                 </div>
 
                 <div class="tarfull card">
                     <a href="tarrful.html">
-                        <img src="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg"  border="2px" alt="" />
+                        <img src="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg"  
+                        border="2px" alt="" />
                         <p>Tarrful</p>
                     </a>
                 </div>
 
                 <div class="organa card">
                     <a href="bail_organa.html">
-                        <img src="../../images/characters/image_centpx/organa_resultatredimensionner.jpg" border="2px" alt="" />
+                        <img src="../../images/characters/image_centpx/organa_resultatredimensionner.jpg" 
+                        border="2px" alt="" />
                         <p>Bail Organa</p>
                     </a>
                 </div>
