--- a/css/indexfilms.css
+++ b/css/indexfilms.css
@@ -14,10 +14,15 @@
     text-decoration: none;
     color: black;
 }
-.left:hover, .center:hover, .right:hover {
-    border: 2px solid black;
-    font-size: 1.5rem;
-    font-weight: bold;
+.lien:hover{
+    border: 2px solid gold;
+}
+.lien>p, h1{
+    color: gold;
+}
+.lien>img {
+    width: 85%;
+    weight: 85%
 }
 iframe {
     width: 100%;
