--- a/css/indexfilms.css
+++ b/css/indexfilms.css
@@ -15,10 +15,10 @@
     color: black;
 }
 .lien:hover{
-    border: 2px solid gold;
+    border: 2px solid #b98f3d;
 }
 .lien>p, h1{
-    color: gold;
+    color: #b98f3d;
 }
 .lien>img {
     width: 85%;
