--- a/views/characters/index.html
+++ b/views/characters/index.html
@@ -53,7 +53,7 @@
                     <a href="mace_windu.html">
                         <img src="../../images/characters/image_centpx/mace_windu_resultatredimensionner.jpg"  
                         border="2px"/>
-                        <p>>Mace Windu</p>
+                        <p>Mace Windu</p>
                     </a>
                 </div>
             </div>
