--- a/css/corpocss.css
+++ b/css/corpocss.css
@@ -33,13 +33,24 @@ h2 {
 
 
 .card {
+    margin-bottom: 25px;
+    box-shadow: 3px 3px #808000a3, -1em 0 0.4em #58441db8;
     background-color: #ffffff6b;
     border-radius: 7px;
     padding-left: 3%;
-    border: solid 2px yellow;
+    border: solid 2px #b98f3d;
     height: 160px;
     width: 120px;
     padding: 3%;
     text-align: center;
+  
 }
 
+
+
+.card:hover{
+    transform: scale(1.5) translate(50%, -50% );
+    width: 150px;
+    background-color: rgba(255, 217, 0, 0.228);
+    transition: transform 330ms ease-in-out
+}
