--- a/css/corpocss.css
+++ b/css/corpocss.css
@@ -34,11 +34,12 @@ h2 {
 
 .card {
     margin-bottom: 25px;
-    box-shadow: 3px 3px #808000a3, -1em 0 0.4em #58441db8;
+    box-shadow: 0px 0px 10px #EFA23A;
     background-color: #ffffff6b;
     border-radius: 7px;
     padding-left: 3%;
-    border: solid 2px #b98f3d;
+    
+    border: solid 3px #EFA23A;
     height: 160px;
     width: 120px;
     padding: 3%;
@@ -49,7 +50,7 @@ h2 {
 
 
 .card:hover{
-    box-shadow: 4px 4px #808000a3, -1em 0 0.4em #58441db8;
+    
     transform: scale(1.5) translate(50%, -30% );
     width: 150px;
     background-color: rgba(255, 217, 0, 0.228);
