--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ main{
 }
 
 footer{
-    margin-top: auto;
+    margin-top: 2rem;
 }
 
 a {
@@ -29,7 +29,9 @@ a {
 
 iframe {
 	width: 100%;
+    height: 5rem;
 }
+
 .container {
 	margin-left: 10% !important;
 	margin-right: 10% !important;
