--- a/css/corpocss.css
+++ b/css/corpocss.css
@@ -51,7 +51,7 @@ h2 {
 
 .card:hover{
     
-    transform: scale(1.5) translate(50%, -30% );
+    transform: scale(1.5) ;
     width: 150px;
     background-color: rgba(255, 217, 0, 0.228);
     transition: transform 400ms ease-in-out;
