--- a/css/corpocss.css
+++ b/css/corpocss.css
@@ -34,7 +34,7 @@ h2 {
 
 .card {
     margin-bottom: 25px;
-    box-shadow: 3px 3px #808000a3, -1em 0 0.4em #58441db8;
+    box-shadow: 0px 0px 10px #efa13ac9;
     background-color: #ffffff6b;
     border-radius: 7px;
     padding-left: 3%;
@@ -50,9 +50,8 @@ h2 {
 
 .card:hover{
     box-shadow: 4px 4px #808000a3, -1em 0 0.4em #58441db8;
-    transform: scale(1.5) translate(50%, -30% );
-    width: 150px;
-    background-color: rgba(255, 217, 0, 0.228);
+    transform: scale(1) translate(30%, -30% );
+    background-color: rgba(255, 217, 0, 0.744);
     transition: transform 400ms ease-in-out;
-    background-color: rgba(255, 217, 0, 0.205);
+
 }
