--- a/css/corpocss.css
+++ b/css/corpocss.css
@@ -50,8 +50,8 @@ h2 {
 
 
 .card:hover{
-    
-    transform: scale(1.5) ;
+     box-shadow: 5px 0px 10px #EFA23A;
+    transform: scale(1.5)  ;
     width: 150px;
     background-color: rgba(255, 217, 0, 0.228);
     transition: transform 400ms ease-in-out;
