--- a/views/forms/contact.html
+++ b/views/forms/contact.html
@@ -13,57 +13,56 @@
     <header>
       <iframe src="../../views/header.html" frameborder="0"></iframe>
     </header>
+    <main>
+      <div class="container">
+        <div class="contact">
+          <h1>Contact</h1>
+          <form id="contacts">
+            <div id="infos">
+              <label for="cnom"
+                >Nom <input type="text" name="cnom" id="enoms" />
+              </label>
 
-    <div class="container">
-      <div class="contact">
-        <h1>Contact</h1>
-        <form id="contacts">
-          <div id="infos">
-            <label for="cnom"
-              >Nom <input type="text" name="cnom" id="enoms" />
-            </label>
+              <label for="passe"
+                >Prénom <input type="text" name="passe" id="passwords" />
+              </label>
 
-            <label for="passe"
-              >Prénom <input type="text" name="passe" id="passwords" />
-            </label>
+              <label for="mailcontact"
+                >Email
+                <input type="email" name="mailcontact" id="euser" />
+              </label>
 
-            <label for="mailcontact"
-              >Email
-              <input type="email" name="mailcontact" id="euser" />
-            </label>
-
-            <label for="envoyer"
-              ><input
-                type="submit"
-                class="submit"
-                name="envoyer"
-                id="envoyer"
-                value="Envoyer"
-              />
-            </label>
-            <label for="reinitialiser">
-              <input
-                type="reset"
-                id="reset"
-                name="reset"
-                value="&nbsp Reset &nbsp"
-            /></label>
-          </div>
-          <div id="remarque">
-            <label for="remarque"
-              >Remarques:
-              <br />
-              <br />
-              <textarea name="remarque" id="remarques" rows="10" cols="25">
-              </textarea>
-
-            </label>
-          </div>
-        </form>
+              <label for="envoyer"
+                ><input
+                  type="submit"
+                  class="submit"
+                  name="envoyer"
+                  id="envoyer"
+                  value="Envoyer"
+                />
+              </label>
+              <label for="reinitialiser">
+                <input
+                  type="reset"
+                  id="reset"
+                  name="reset"
+                  value="&nbsp Reset &nbsp"
+              /></label>
+            </div>
+            <div id="remarque">
+              <label for="remarque"
+                >Remarques:
+                <br />
+                <br />
+                <textarea name="remarque" id="remarques" rows="10" cols="25">
+                </textarea>
+              </label>
+            </div>
+          </form>
+        </div>
       </div>
-    </div>
-    <br/>
-
+      <br />
+    </main>
     <footer>
       <iframe src="../../views/footer.html" frameborder="0"></iframe>
     </footer>
