--- a/views/characters/index.html
+++ b/views/characters/index.html
@@ -141,7 +141,7 @@
                 </div>
 
                 <div class="sio card">
-                    <a href="#">
+                    <a href="sio_bibble.html">
                         <img src="../../images/characters/image_centpx/sio_bibble_resultatredimensionner.jpg"
                             border="2px" alt="" />
                         <p>Sio Bibble</p>
