--- a/views/characters/yoda.html
+++ b/views/characters/yoda.html
@@ -23,7 +23,7 @@
 						</p>
 					</div>
 					<div class="presentoir">
-						<img src="../../images/characters/yoda.webp" alt="" />
+						<img src="../../images/characters/yoda.webp"  width="150px"alt="" />
 						<table>
 							<tr>
 								<th>Apparaît dans :</th>
