--- a/css/header.css
+++ b/css/header.css
@@ -18,7 +18,7 @@ header {
 .gauche>a {
   font-size: large;
   text-align: center;
-  margin-right: 50px;
+  margin-right: 8%;
 }
 .btn {
   border: 2px solid black;
@@ -30,3 +30,92 @@ header {
   color: black;
 }
 
+@media screen and (max-width:800px) {
+  .gauche>a {
+    margin-right: 0%; 
+}
+}
+
+@media screen and (min-width:801px) and (max-width:820px) {
+  .gauche>a {
+    margin-right: 5%; 
+  }
+  }
+
+@media screen and (max-width:700px) {
+  header {
+    width:100%;
+    justify-content: space-evenly;
+  }
+  .menuheader {
+    display:flex;
+    flex-direction:column;
+  }
+  .droite {
+    height:80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+}
+
+
+@media screen and (min-width:370px) and (max-width:416px) {
+  .droite {
+    margin-right:5%;
+    margin-top:2%;
+    padding-left: 1%;
+  }
+}
+
+@media screen and (min-width:417px) and (max-width:600px) {
+  .menuheader {
+    padding-left: 10%;
+  }
+}
+
+@media screen and (min-width:601px) and (max-width:700px) {
+  .menuheader {
+   padding-left:20%;
+  }
+}
+
+@media screen and (min-width:821px) and (max-width:912px) {
+  .menuheader {
+    padding-left:4%;
+  }
+  .droite {
+    margin-right:2%;
+  }
+}
+
+@media screen and (min-width:913px) and (max-width:1024px) {
+  .gauche>a {
+    margin-right: 0%; 
+  }
+  header {
+    width:100%;
+    justify-content: space-around;
+}
+  .droite {
+    margin-right:9%;
+  }
+  .logo {
+    margin-left:10%;
+  }
+
+@media screen and (min-width:1025px) and (max-width:1280px) {
+  .gauche>a {
+    margin-right: 0%; 
+}
+header {
+  width:100%;
+  justify-content: space-around;
+}
+  .droite {
+    margin-right:4%;
+  }
+  .logo {
+    margin-left:4%;
+  }
+}
