--- a/views/header.html
+++ b/views/header.html
@@ -6,18 +6,20 @@
 	</head>
 	<body>
 		<header>
-			<div class="gauche">
-				<a href="index.html" target="_parent"><img src="../images/logo.png" width="100px" height="50px" /></a>
-				<a href="index.html" target="_parent">Films</a>
-				<a href="characters/index.html" target="_parent">Personnages</a>
-				<a href="planets/index.html" target="_parent">Planètes</a>
-				<a href="corporations/index.html" target="_parent">Corporations</a>
-				<a href="forms/contact.html" target="_parent">Contact</a>
-			</div>
-			<div class="droite">
+				<div class="gauche">
+					<a href="index.html" target="_parent" class="logo"><img src="../images/logo.png" width="100px" height="50px" /></a>
+					<div class="menuheader">
+						<a href="index.html" target="_parent">Films</a>
+						<a href="characters/index.html" target="_parent">Personnages</a>
+						<a href="planets/index.html" target="_parent">Planètes</a>
+						<a href="corporations/index.html" target="_parent">Corporations</a>
+						<a href="forms/contact.html" target="_parent">Contact</a>
+					</div>
+				</div>
+				<div class="droite">
 				<a class="btn" href="forms/inscription.html" target="_parent">Inscription</a>
 				<a class="btn" href="forms/connexion.html" target="_parent">Connexion</a>
-			</div>
+				</div>
 		</header>
 	</body>
 </html>
