--- a/css/contact.css
+++ b/css/contact.css
@@ -7,7 +7,9 @@ body {
   color: #b98f3d;
   max-width: 100%;
   max-height: 100%;
-  margin: auto;
+  margin-top: 10%;
+  margin-left: auto;
+  margin-right: auto;
   width: 600px;
   height: 300px;
   border: solid 1px #b98f3d;
