--- a/css/header.css
+++ b/css/header.css
@@ -21,13 +21,14 @@ header {
   margin-right: 8%;
 }
 .btn {
-  border: 2px solid black;
+  border: 2px solid white;
   border-radius: 2rem;
-  background-color: lightgrey;
+  background-color: #b98f3d;
   padding: 1% 5% 1% 5%;
   margin-left: 10%;
   text-decoration: none;
   color: black;
+  box-shadow: 3px 2px 2px grey;
 }
 
 @media screen and (max-width:800px) {
