--- a/views/movies/movie1.html
+++ b/views/movies/movie1.html
@@ -41,7 +41,7 @@
 				</div>
 
 				<div class="trailer">
-					<iframe
+					<iframe class="integration"
 						width="1000"
 						height="650"
 						src="https://www.youtube.com/embed/G9e3R-vkj_A"
