--- a/css/planete&corpo.css
+++ b/css/planete&corpo.css
@@ -1,33 +1,38 @@
 .title {
-    color: #EFA23A;
+	color: #efa23a;
 	text-align: center;
 }
 .card {
-    text-align: center;
-    box-shadow: 0px 0px 10px #EFA23A;
-    border: solid 3px #EFA23A;
-    border-radius: 1rem;
-    padding: 1rem;
-    margin: 1rem;
+	text-align: center;
+	box-shadow: 0px 0px 10px #efa23a;
+	border: solid 3px #efa23a;
+	border-radius: 1rem;
+	padding: 1rem;
+	margin: 1rem;
 	width: 20%;
 }
 .list {
 	display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+	flex-wrap: wrap;
+	justify-content: space-around;
 }
 .card img {
-	width: 100%; 
+	width: 100%;
 }
 
-.bg-white{
-    background: #fff;
+.bg-white {
+	background: #fff;
 }
 
 @media (max-width: 700px) {
-    .card {
-        padding: 1rem;
-        text-align: center;
-        width: 30%;
-    }
+	.card {
+		padding: 1rem;
+		text-align: center;
+		width: 30%;
+	}
+}
+
+.card:hover {
+	transform: scale(1.1);
+	transition: transform 400ms ease-in-out;
 }
