--- a/views/characters/easteregg.html
+++ b/views/characters/easteregg.html
@@ -4,13 +4,15 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../css/styles.css" />
+		<link rel="stylesheet" href="../../css/styles.css" />
 		<style>
 			img{
                 position: relative;
 				animation-name: vaisseau;
 				animation-duration: 20s;
-                margin-left: 35%;
+                margin-left: 40%;
+				margin-right: 40%;
+                width: 20%;
                 margin-top: 15%;
                 
 			}
@@ -25,8 +27,10 @@
 				}
 			}
 
-            .test{
-                margin-left: 40%;
+            #test{
+				margin-left: 40%;
+				margin-right: 40%;
+                width: 20%;
                 text-align: center;
                 position: absolute;
 				animation-name: text;
@@ -36,7 +40,7 @@
 
 			@keyframes text {
 				from {
-                    top:  calc(100vh + 300px);
+                    top:  calc(100vh + 1000rem);
 				}
 				to {
 					top: -300px;
@@ -52,7 +56,7 @@
 	<body>
 		<main>
             <img src="https://i.pinimg.com/originals/1d/45/ef/1d45ef47a2f564bfbd3a5587fb33ccca.png" alt="">
-			<div class="test">
+			<div id="test">
 				<h1>La Fatal Mevy :</h1>
 				<h2>---- François ----</h2>
 				<h2>---- Marina ----</h2>
