--- a/css/header.css
+++ b/css/header.css
@@ -34,6 +34,9 @@ header {
 
 .menuheader {
   width:750px;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
 }
 
 @media screen and (max-width:820px) {
