--- a/views/header.html
+++ b/views/header.html
@@ -13,7 +13,7 @@
 						<a href="characters/index.html" target="_parent">Personnages</a>
 						<a href="planets/index.html" target="_parent">Planètes</a>
 						<a href="corporations/index.html" target="_parent">Corporations</a>
-						<a class="contact" href="forms/contact.html" target="_parent">Contact</a>
+						<a href="forms/contact.html" target="_parent">Contact</a>
 					</div>
 				</div>
 				<div class="droite">
