--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,11 @@ iframe:not(.trailer > iframe) {
 	width: 50%;
 }
 
+.geonosis img, .utapau img{
+    margin-top: 23%;
+    margin-bottom: 23%;
+}
+
 @media (max-width: 700px) {
 	.presentation {
 		flex-wrap: wrap;
