--- a/views/characters/anakin_skywalker.html
+++ b/views/characters/anakin_skywalker.html
@@ -88,6 +88,7 @@
 						traces de brûlures et pour survivre, Anakin sera enfermé dans une sombre armure de survie qu'il occupera jusqu'à la fin de sa vie.
 					</p>
 				</div>
+				<a href="palpatine.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">palpatine</a>
 			</div>
 		</main>
 		<footer>
