--- a/views/characters/boba_fett.html
+++ b/views/characters/boba_fett.html
@@ -81,6 +81,8 @@
                     le groupe de chasseurs de primes repart, affirmant à Boba que l'heure de Windu viendra tôt ou tard.
                 </p>
             </div>
+            <a href="poggle_le_bref.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">poggle le bref </a>
+            <a href="jango_fett.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">jango fett</a>
     </main>
     <footer>
         <iframe src="../footer.html" frameborder="0"></iframe>
