--- a/views/characters/boss_nass.html
+++ b/views/characters/boss_nass.html
@@ -93,6 +93,8 @@
 						planète de plusieurs organisations criminelles mais sut les affronter avec courage et intelligence.
 					</p>
 				</div>
+				<a href="qui_gon_jinn.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">qui gon inn</a>
+				<a href="jar_jar_bink.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">jar jar bink</a>
 			</div>
 		</main>
 		<footer>
