--- a/views/characters/c-3po.html
+++ b/views/characters/c-3po.html
@@ -84,6 +84,8 @@
 						charme. C'est d'ailleurs ce qui a créé une véritable osmose avec son interprète, Anthony Daniels.
 					</p>
 				</div>
+				<a href="sio_bibble.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">sio bibble</a>
+				<a href="r2-d2.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">R2d2</a>
 			</div>
 		</main>
 		<footer>
