--- a/views/characters/chewbacca.html
+++ b/views/characters/chewbacca.html
@@ -81,6 +81,8 @@
 					</p>
 					<p></p>
 				</div>
+			<a href="general_grievous.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">general grievious</a>
+			<a href="tarrful.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">padme</a>
 			</div>
 		</main>
 		<footer>
