--- a/views/characters/compte_dooku.html
+++ b/views/characters/compte_dooku.html
@@ -97,6 +97,8 @@
 						Séparatiste.
 					</p>
 				</div>
+				
+				<a href="zam_wesell.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">zem wesell</a>
 			</div>
 		</main>
 		<footer>
