--- a/views/characters/dexter_jettster.html
+++ b/views/characters/dexter_jettster.html
@@ -71,6 +71,8 @@
 					</p>
 					<p></p>
 				</div>
+				<a href="taun_we.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">tawn we</a>
+				<a href="gregar_typho.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">gregar typho</a>
 			</div>
 		</main>
 		<footer>
