--- a/views/characters/finis_valorum.html
+++ b/views/characters/finis_valorum.html
@@ -82,6 +82,8 @@
 						Palpatine.
 					</p>
 				</div>
+				
+				<a href="nute_gunray.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">nute gunray</a>
 			</div>
 		</main>
 		<footer>
