--- a/views/characters/gregar_typho.html
+++ b/views/characters/gregar_typho.html
@@ -80,6 +80,8 @@
 						gauche.
 					</p>
 				</div>
+				<a href="dexter_jettster.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">anakin</a>
+				<a href="index.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">acceuil revenche des shits</a>
 			</div>
 		</main>
 		<footer>
