--- a/views/characters/jar_jar_bink.html
+++ b/views/characters/jar_jar_bink.html
@@ -83,6 +83,8 @@
 						renverse. Pris au piège, il se rend finalement fort peu courageusement aux premières sommations de l'armée droïde, qui est heureusement désactivée peu de temps après.
 					</p>
 				</div>
+				<a href="jar_jar_bink.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">jar jar bink</a>
+				<a href="ki_adi_mundi.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">ki adi mundi</a>
 			</div>
 		</main>
 		<footer>
