--- a/views/characters/ki_adi_mundi.html
+++ b/views/characters/ki_adi_mundi.html
@@ -61,7 +61,9 @@
 					<p>Ki-Adi-Mundi est le padawan du Maître Jedi <a href="yoda.html">Yoda</a>. Sa sagesse était légendaire. Seul chevalier nommé au Conseil Jedi, il devient maitre Jedi quelques années plus tard. Il devient ensuite lui-même, à l'instar d'un autre apprenti de Yoda nommé <a href="mace_windu.html">Mace Windu</a>, membre du conseil Jedi. Le premier sabre laser de Ki-Adi-Mundi affiche une lame de couleur violette.</p> 
                     <p>Ki-Adi-Mundi assiste au début de la guerre des clones. En effet, il fait partie des Jedi qui viennent porter secours à leurs collègues dans l'arène des exécutions, lors de la praière bataille de <a href="../planets/geonosis.html">Géonosis</a>. Il en survit et devient général de l'armée clone. Il commande dès lors les Marines galactiques.</p> 
                     <p>Le Jedi participe à la seconde bataille de Géonosis. Durant celle-ci, il surpasse <a href="anakin_skywalker.html">Anakin Skywalker</a> et son apprentie Ahsoka Tano en nombre de droïdes de combat séparatistes vaincus, sans être dans un premier taps au courant de la compétition entre les deux autres Jedi.</p>
-                    
+                  
+                    <a href="jar_jar_bink.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">jar jar bink</a>
+				<a href="yoda.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">yoda</a>
 			</div>
 		</main>
 		<footer>
