--- a/views/characters/mace_windu.html
+++ b/views/characters/mace_windu.html
@@ -77,6 +77,8 @@
 						immédiatement à son bureau accompagné de trois Jedi seulement, Kit Fisto, Agen Kolar et Saesee Tiin.
 					</p>
 				</div>
+				<a href="obi-wan_kenobi.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">obiwan</a>
+				<a href="index.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="" title="voir les protagoniste de la menace fantome">index personnages</a>
 			</div>
 		</main>
 		<footer>
