--- a/views/characters/nute_gunray.html
+++ b/views/characters/nute_gunray.html
@@ -106,6 +106,8 @@
 						Dark Sidious le trahit ainsi en le faisant tuer.
 					</p>
 				</div>
+				<a href="finis_valorum.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">finis valorum</a>
+				<a href="qui_gon_jinn.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">qui gon jinn</a>
 			</div>
 		</main>
 		<footer>
