--- a/views/characters/obi-wan_kenobi.html
+++ b/views/characters/obi-wan_kenobi.html
@@ -94,6 +94,8 @@
 						survivre, Anakin sera enfermé dans une sombre armure de survie qu'il occupera jusqu'à la fin de sa vie.
 					</p>
 				</div>
+				<a href="padme_amidala.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">padme</a>
+				<a href="mace_windu.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">mace Windu</a>
 			</div>
 		</main>
 		<footer>
