--- a/views/characters/padme_amidala.html
+++ b/views/characters/padme_amidala.html
@@ -88,6 +88,8 @@
 						seigneur noir des Sith.
 					</p>
 				</div>
+				<a href="palpatine.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">palpatine</a>
+				<a href="obi-wan_kenobi.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">obi wan </a>
 			</div>
 		</main>
 		<footer>
