--- a/views/characters/palpatine.html
+++ b/views/characters/palpatine.html
@@ -102,6 +102,8 @@
 						ap. BY lors de la bataille finale contre la seconde étoile de la Mort. Il opère son retour dans l’épisode IX, où il est définitivaent éliminé par Rey, sa petite-fille.
 					</p>
 				</div>
+				<a href="anakin_skywalker.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">anakin</a>
+				<a href="padme_amidala.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">padme</a>
 			</div>
 		</main>
 		<footer>
