--- a/views/characters/panaka.html
+++ b/views/characters/panaka.html
@@ -83,6 +83,8 @@
 						<a href="../planets/naboo.html">Naboo</a> restait vulnérable en cas d'attaque.
 					</p>
 				</div>
+				<a href="r2-d2.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">r2d2</a>
+				<a href="index.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">acceuil l' attaque des clones  </a>
 			</div>
 		</main>
 		<footer>
