--- a/views/characters/poggle_le_bref.html
+++ b/views/characters/poggle_le_bref.html
@@ -97,6 +97,8 @@
 						The Clone Wars (série animée)
 					</p>
 				</div>
+				<a href="zam_wesell.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">zam wesell</a>
+				<a href="boba_fett.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">boba fett</a>
 			</div>
 		</main>
 		<footer>
