--- a/views/characters/qui_gon_jinn.html
+++ b/views/characters/qui_gon_jinn.html
@@ -104,6 +104,8 @@
 						<a href="../corporations/jedi.html">conseil Jedi</a> et le chancelier suprême <a href="../characters/palpatine.html">Palpatine</a>.
 					</p>
 				</div>
+				<a href="nute_gunray.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">nute gunray</a>
+				<a href="boss_nass.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">boss nass</a>
 			</div>
 		</main>
 		<footer>
