--- a/views/characters/r2-d2.html
+++ b/views/characters/r2-d2.html
@@ -89,6 +89,8 @@
 						Leia.
 					</p>
 				</div>
+				<a href="c-3po.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">anakin</a>
+				<a href="panaka.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">captain panaka</a>
 			</div>
 		</main>
 		<footer>
