--- a/views/characters/shmi_skywalker.html
+++ b/views/characters/shmi_skywalker.html
@@ -84,6 +84,8 @@
 						Durant les années qui suivent le départ de son fils, Shmi passe de nombreuses nuits à regarder les étoiles pour s'imaginer la vie qu'il mène loin d'elle.
 					</p>
 				</div>
+				<a href="dark_maul.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">dark maul</a>
+				<a href="watto.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">watto</a>
 			</div>
 		</main>
 		<footer>
