--- a/views/characters/sio_bibble.html
+++ b/views/characters/sio_bibble.html
@@ -69,6 +69,8 @@
 						<a href="../characters/padme_amidala.html">Padmé Amidala</a>.
 					</p>
 				</div>
+				<a href="watto.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">watto</a>
+				<a href="c-3po.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">c3po</a>
 			</div>
 		</main>
 		<footer>
