--- a/views/characters/tarrful.html
+++ b/views/characters/tarrful.html
@@ -99,6 +99,8 @@
 						pertes.
 					</p>
 				</div>
+				<a href="chewbacca.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">chewbacca</a>
+				<a href="bail_organa.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">bail organa</a>
 			</div>
 		</main>
 		<footer>
