--- a/views/characters/taun_we.html
+++ b/views/characters/taun_we.html
@@ -65,7 +65,8 @@
                 <p>Cette assistante ministérielle coordonne le projet de la Grande Armée de la République. Ayant étudié
                     la psychologie humaine, elle veilla à la stabilité mentale des clones.</p>
                 
-
+            <a href="jango_fett.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">jango fett</a>
+            <a href="dexter_jettster.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">dexter jesster</a>
             </div>
     </main>
     <footer>
