--- a/views/characters/watto.html
+++ b/views/characters/watto.html
@@ -87,6 +87,8 @@
 						remplis de gaz.
 					</p>
 				</div>
+				<a href="shmi_skywalker.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">shmi skywalker</a>
+				<a href="sio_bibble.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">sio Bibble</a>
 			</div>
 		</main>
 		<footer>
