--- a/views/characters/yoda.html
+++ b/views/characters/yoda.html
@@ -77,6 +77,8 @@
 						armées de droïdes des guildes de commerce. Quelque chose doit être fait.
 					</p>
 				</div>
+				<a href="ki_adi_mundi.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">ki adi mundi</a>
+				<a href="dark_maul.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">dark maul</a>
 			</div>
 		</main>
 		<footer>
