--- a/views/characters/zam_wesell.html
+++ b/views/characters/zam_wesell.html
@@ -83,6 +83,8 @@
 						génération.
 					</p>
 				</div>
+				<a href="zam_wesell.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">zam wesell</a>
+				<a href="poggle_le_bref.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">poggle le poggle le bref</a>
 			</div>
 		</main>
 		<footer>
