--- a/views/forms/connexion.html
+++ b/views/forms/connexion.html
@@ -37,6 +37,7 @@
             <a href="#" id="oubli">Mot de passe oublié ?</a>
           </form>
         </div>
+        <img src="../../images/background/ré.gif" class="robot" alt="">
       </div>
     </main>
     <footer>
