--- a/views/forms/contact.html
+++ b/views/forms/contact.html
@@ -61,6 +61,7 @@
           </form>
         </div>
       </div>
+      <img src="../../images/background/ré.gif" class="robot" alt="">
       <br />
     </main>
     <footer>
