--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,9 @@
 		<header>
 			<iframe src="../views/header.html" frameborder="0"></iframe>
 		</header>
-		<main>
+		
+		
+		<main><div id="volet_gauche"></div><div id="volet_droite"></div>
 			<div class="container">
 				<div class="indexfilm">
 					<h1>Star Wars Préquelle</h1>
