--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ a {
 	color: #b98f3d;
 }
 
-h1{
+h1 {
 	text-align: center;
 	color: #efa23a;
 }
@@ -48,6 +48,7 @@ iframe:not(.trailer > iframe) {
 	color: #efa23a;
 	text-align: center;
 }
+
 .card {
 	text-align: center;
 	box-shadow: 0px 0px 10px #efa23a;
@@ -57,11 +58,13 @@ iframe:not(.trailer > iframe) {
 	margin: 1rem;
 	width: 20%;
 }
+
 .list {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
 }
+
 .card img {
 	width: 100%;
 }
@@ -94,10 +97,12 @@ iframe:not(.trailer > iframe) {
 .histoire {
 	margin: 1%;
 }
+
 .presentoir {
 	width: 100%;
 	margin: 1%;
 }
+
 .presentoir img {
 	width: 50%;
 }
@@ -108,7 +113,7 @@ iframe:not(.trailer > iframe) {
 	}
 }
 
-.relations > img {
+.relations>img {
 	float: left;
 	width: 15%;
 }
@@ -165,9 +170,11 @@ iframe:not(.trailer > iframe) {
 		margin-left: 0%;
 		margin-right: 0%;
 	}
+
 	.poster {
 		width: 100%;
 	}
+
 	.synopsis {
 		width: 98%;
 		text-align: left;
@@ -190,6 +197,7 @@ iframe:not(.trailer > iframe) {
 /* inscription */
 
 .inscrire {
+	display: flex;
 	color: #b98f3d;
 	max-width: 100%;
 	max-height: 100%;
@@ -201,20 +209,28 @@ iframe:not(.trailer > iframe) {
 	border: solid 1px #b98f3d;
 	border-radius: 5px;
 	background-color: black;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-content: center;
+	align-items: center;
 }
+
 
 
 #compte {
 	margin: 5px;
 }
+
 #password {
 	text-align: left;
 	display: flex;
 	justify-content: space-around;
 }
+
 #oubli_cache {
 	text-decoration: none;
 }
+
 #inscription {
 	border: solid 2px #b98f3d;
 	border-radius: 2px;
@@ -225,6 +241,7 @@ iframe:not(.trailer > iframe) {
 /* connexion */
 
 .connect {
+	display: flex;
 	color: #b98f3d;
 	max-width: 100%;
 	max-height: 100%;
@@ -236,20 +253,27 @@ iframe:not(.trailer > iframe) {
 	border: solid 1px #b98f3d;
 	border-radius: 5px;
 	background-color: black;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-content: center;
 }
+
 #logging {
 	margin: 5px;
 }
+
 #user {
 	text-align: left;
 	display: flex;
 	justify-content: space-around;
 }
+
 #infos {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 }
+
 #oubli {
 	text-align: right;
 	display: flex;
@@ -262,6 +286,7 @@ iframe:not(.trailer > iframe) {
 	color: #b98f3d;
 	background-color: black;
 }
+
 #boutton {
 	border: solid 2px #b98f3d;
 	border-radius: 2px;
@@ -284,11 +309,13 @@ iframe:not(.trailer > iframe) {
 	border-radius: 5px;
 	background-color: black;
 }
+
 #contacts {
 	text-align: center;
 	display: flex;
 	justify-content: space-around;
 }
+
 #infos {
 	display: flex;
 	flex-direction: column;
@@ -301,6 +328,7 @@ iframe:not(.trailer > iframe) {
 	color: #b98f3d;
 	background-color: black;
 }
+
 #reset {
 	border: solid 2px #b98f3d;
 	border-radius: 2px;
@@ -348,47 +376,87 @@ iframe:not(.trailer > iframe) {
 	width: 150px;
 	background-color: rgba(255, 217, 0, 0.228);
 	transition: transform 400ms ease-in-out;
-	background-image: url(../../Projet-Star-Wars/images/background/force.gif);
-	background-repeat: round;
+
+
 }
 
 .robot {
 	width: 150px;
-	height: 150px;
-	margin-left: 37%;
-	width: 160px;
-	height: 150px;
-	margin-top: 6%;
+    height: 150px;
+    margin-left: 44%;
+    margin-top: 6%;
 }
 
 /* index film */
 .accueil {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-around;
-    align-items: center;
-    margin: 5% 0% 10% 0%;
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: space-around;
+	align-items: center;
+	margin: 5% 0% 10% 0%;
 }
 
-.left>a, .center>a, .right>a {
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content:center;
-    align-items: center;
-    text-decoration: none;
-    color: black;
+.left>a,
+.center>a,
+.right>a {
+	display: flex;
+	flex-flow: column nowrap;
+	justify-content: center;
+	align-items: center;
+	text-decoration: none;
+	color: black;
 }
-.lien:hover{
-    border: 2px solid #b98f3d;
+
+.lien:hover {
+	border: 2px solid #b98f3d;
 }
-.lien>p, h1{
-    color: #b98f3d;
+
+.lien>p,
+h1 {
+	color: #b98f3d;
 }
+
 .lien>img {
-    width: 85%;
-    weight: 85%
+	width: 85%;
+	weight: 85%
 }
+
 .indexfilm {
-    max-width: 75%;
-    margin-left: 1%;
+	max-width: 75%;
+	margin-left: 1%;
 }
+
+/* ajout
+.bien:hover {
+	background-image: url(../images/background/force.gif);
+	background-repeat: round;
+
+
+}
+
+.mal:hover {
+	background-image: url(../images/background/effet.gif);
+	background-position: center;
+	background-repeat: no-repeat;
+}
+*/
+/*resize obiwan*/
+.img {
+	height: 100px;
+	width: 80PX;
+}
+
+.right {
+	float: right;
+	width: 30px;
+
+}
+
+.left {
+	float: left;
+	width: 30px;
+
+
+}
+
+
