--- a/views/characters/general_grievous.html
+++ b/views/characters/general_grievous.html
@@ -77,6 +77,7 @@
 						Ses côtes se brisèrent et il mourut sans avoir pu venger Padmé.
 					</p>
 				</div>
+				<a href="chewbacca.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">chewbacca </a>
 			</div>
 		</main>
 		<footer>
