--- a/views/characters/index.html
+++ b/views/characters/index.html
@@ -19,32 +19,32 @@
 				<h1>Les personnages de la trilogie</h1>
 				<h2>Personnages récurrent de la trilogie</h2>
 				<div class="list">
-					<div class="anakin card1">
+					<div class="anakin card1 bien">
 						<a href="anakin_skywalker.html">
 							<img src="../../images/characters/image_centpx/anna_skywalker_resultatredimensionner.webp" border="2px" />
 							<p>Anakin</p>
 						</a>
 					</div>
 
-					<div class="palpatine card1">
+					<div class="palpatine card1 mal ">
 						<a href="palpatine.html">
 							<img src="../../images/characters/image_centpx/empereur_palpatine_resultatredimensionner.webp" border="2px" alt="" />
 							<p>Palpatine</p>
 						</a>
 					</div>
-					<div class="amidala card1">
+					<div class="amidala card1 bien ">
 						<a href="padme_amidala.html">
-							<img src="../../images/characters/image_centpx/padme_admidala_resultatredimensionner.webp" border="2px" alt="" />
+							<img src="../../images/characters/image_centpx/padme_admidala_resultatredimensionner.webp" border="2px"  height="100px" alt="" />
 							<p>Amidala</p>
 						</a>
 					</div>
-					<div class="obiwan card1">
+					<div class="obiwan card1 bien">
 						<a href="obi-wan_kenobi.html">
-							<img src="../../images/characters/image_centpx/hobi_wan_resultatredimensionner.jpg" border="2px" alt="" />
+							<img src="../../images/characters/image_centpx/hobi_wan_resultatredimensionner.jpg" border="2px" class="img" alt="" />
 							<p>Obi-wan Kenobi</p>
 						</a>
 					</div>
-					<div class="mace card1">
+					<div class="mace card1 bien ">
 						<a href="mace_windu.html">
 							<img src="../../images/characters/image_centpx/mace_windu_resultatredimensionner.jpg" border="2px" />
 							<p>Mace Windu</p>
@@ -54,63 +54,63 @@
 
 				<h2>Les protagonistes apparu dans La Menace Fantôme</h2>
 				<div class="list">
-					<div class="valorum card1">
+					<div class="valorum card1 bien">
 						<a href="finis_valorum.html">
 							<img src="../../images/characters/image_centpx/finis_valorum_resultatredimensionner.jpg" border="2px" alt="" />
 							<p>Valorum</p>
 						</a>
 					</div>
 
-					<div class="gunray card1">
+					<div class="gunray card1 mal">
 						<a href="nute_gunray.html">
 							<img src="../../images/characters/image_centpx/nute_gunray_resultatredimensionner.webp" alt="" border="2px" />
 							<p>Nute Gunray</p>
 						</a>
 					</div>
 
-					<div class="qui card1">
+					<div class="qui card1 bien" >
 						<a href="qui_gon_jinn.html">
 							<img src="../../images/characters/image_centpx/qui-gon_jinn_resultatredimensionner.webp" border="2px" alt="" />
 							<p>Qui Gon Jinn</p>
 						</a>
 					</div>
 
-					<div class="boss card1">
+					<div class="boss card1 bien">
 						<a href="boss_nass.html">
 							<img src="../../images/characters/image_centpx/rugor_nass_resultatredimensionner.webp" alt="" border="2px" />
 							<p>Boss Nass</p>
 						</a>
 					</div>
 
-					<div class="jar card1">
+					<div class="jar card1 bien">
 						<a href="jar_jar_bink.html">
 							<img src="../../images/characters/image_centpx/jarjar-bink_resultatredimensionner.jpg" border="2px" alt="" />
 							<p>Jar Jar Binks</p>
 						</a>
 					</div>
 
-					<div class="ki card1">
+					<div class="ki card1 bien">
 						<a href="ki_adi_mundi.html">
 							<img src="../../images/characters/image_centpx/ki_di_mundi_resultatredimensionner.webp" border="2px" alt="" />
 							<p>Ki Adi Mundi</p>
 						</a>
 					</div>
 
-					<div class="yoda card1">
+					<div class="yoda card1 bien">
 						<a href="yoda.html">
 							<img src="../../images/characters/image_centpx/yoda_resultatredimensionner.webp" border="2px" alt="" />
 							<p>Yoda</p>
 						</a>
 					</div>
 
-					<div class="dark card1">
+					<div class="dark card1 mal">
 						<a href="dark_maul.html">
 							<img src="../../images/characters/image_centpx/dark_maul_resultatredimensionner.webp" alt="" border="2px" />
 							<p>Dark Maul</p>
 						</a>
 					</div>
 
-					<div class="shmi card1">
+					<div class="shmi card1 ">
 						<a href="shmi_skywalker.html">
 							<img src="../../images/characters/image_centpx/shmi_skywalker_resultatredimensionner.webp" border="2px" alt="" />
 							<p>Shmi Skywalker</p>
@@ -124,28 +124,28 @@
 						</a>
 					</div>
 
-					<div class="sio card1">
+					<div class="sio card1 bien">
 						<a href="sio_bibble.html">
 							<img src="../../images/characters/image_centpx/sio_bibble_resultatredimensionner.jpg" border="2px" alt="" />
 							<p>Sio Bibble</p>
 						</a>
 					</div>
 
-					<div class="c3po card1">
+					<div class="c3po card1 bien">
 						<a href="c-3po.html">
 							<img src="../../images/characters/image_centpx/c3po_resultatredimensionner.jpg" alt="" border="2px" />
 							<p>C-3po</p>
 						</a>
 					</div>
 
-					<div class="r2d2 card1" card1>
+					<div class="r2d2 card1 bien" card1>
 						<a href="r2-d2.html">
 							<img src="../../images/characters/image_centpx/R2d2_resultatredimensionner.webp" alt="" border="2px" />
 							<p>R2-D2</p>
 						</a>
 					</div>
 
-					<div class="panaka card1">
+					<div class="panaka card1 bien">
 						<a href="panaka.html">
 							<img src="../../images/characters/image_centpx/captain_tanaka_resultatredimensionner.jpg" alt="" border="2px" />
 							<p>Captain Panaka</p>
@@ -155,14 +155,14 @@
 
 				<h2>Les protagonistes apparus dans L'Attaque des Clones</h2>
 				<div class="list">
-					<div class="compte card1">
+					<div class="compte card1  mal bien ">
 						<a href="compte_dooku.html">
 							<img src="../../images/characters/image_centpx/compte_dooku_resultatredimensionner.webp" alt="" border="2px" />
 							<p>Comte Dooku</p>
 						</a>
 					</div>
 
-					<div class="zam card1">
+					<div class="zam card1 mal">
 						<a href="zam_wesell.html">
 							<img src="../../images/characters/image_centpx/zam_wesell_resultatredimensionner.jpg" border="2px" alt="" />
 							<p>Zam Wesell</p>
@@ -176,14 +176,14 @@
 						</a>
 					</div>
 
-					<div class="boba card1">
+					<div class="boba card1 mal ">
 						<a href="boba_fett.html">
 							<img src="../../images/characters/image_centpx/boba_fett_resultatredimensionner.webp" border="2px" alt="" />
 							<p>Boba Fett</p>
 						</a>
 					</div>
 
-					<div class="jango card1">
+					<div class="jango card1 mal">
 						<a href="jango_fett.html">
 							<img src="../../images/characters/image_centpx/jango._fett_resultatredimensionner.webp" border="2px" alt="" />
 							<p>Jango Fett</p>
@@ -198,14 +198,14 @@
 					</div>
 
 					<div class="dexter card1">
-						<a href="dexter">
+						<a href="dexter_jettster.html">
 							<img src="../../images/characters/image_centpx/Dexter_resultatredimensionner.webp" alt="" border="2px" />
 							<p>Dexter Jettster</p>
 						</a>
 					</div>
 
-					<div class="typho card1" card1>
-						<a href="typho">
+					<div class="typho card1 bien" card1>
+						<a href="gregar_typho.html">
 							<img src="../../images/characters/image_centpx/gregar_typho_resultatredimensionner.webp" border="2px" alt="" />
 							<p>Gregar Typho</p>
 						</a>
@@ -214,49 +214,49 @@
 
 				<h2>Les protagonistes apparus dans La Revanches des Siths</h2>
 				<div class="list">
-					<div class="c3po card1">
+					<div class="c3po card1 bien ">
 						<a href="c-3po.html">
 							<img src="../../images/characters/image_centpx/c3po_resultatredimensionner.jpg" border="2px" alt="" />
 							<p>C-3po</p>
 						</a>
 					</div>
 
-					<div class="r2d2 card1">
+					<div class="r2d2 card1 bien">
 						<a href="r2-d2.html">
 							<img src="../../images/characters/image_centpx/R2d2_resultatredimensionner.webp" alt="" border="2px" />
 							<p>R2-D2</p>
 						</a>
 					</div>
 
-					<div class="yoda card1">
+					<div class="yoda card1 bien">
 						<a href="yoda.html">
 							<img src="../../images/characters/image_centpx/yoda_resultatredimensionner.webp" alt="" border="2px" />
 							<p>Yoda</p>
 						</a>
 					</div>
 
-					<div class="grievous card1">
+					<div class="grievous card1 mal">
 						<a href="general_grievous.html">
 							<img src="../../images/characters/image_centpx/Grievoushead_resultatredimensionner.webp" border="2px" alt="" />
 							<p>Général Grievous</p>
 						</a>
 					</div>
 
-					<div class="chewbacca card1">
+					<div class="chewbacca card1 bien">
 						<a href="chewbacca.html">
 							<img src="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg" border="2px" alt="" />
 							<p>Chewbacca</p>
 						</a>
 					</div>
 
-					<div class="tarfull card1">
+					<div class="tarfull card1 bien">
 						<a href="tarrful.html">
 							<img src="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg" border="2px" alt="" />
 							<p>Tarrful</p>
 						</a>
 					</div>
 
-					<div class="organa card1">
+					<div class="organa card1 bien ">
 						<a href="bail_organa.html">
 							<img src="../../images/characters/image_centpx/organa_resultatredimensionner.jpg" border="2px" alt="" />
 							<p>Bail Organa</p>
