--- a/views/characters/jango_fett.html
+++ b/views/characters/jango_fett.html
@@ -67,6 +67,8 @@
                 <p>
                     Peu après, les Jedi <a href="obi-wan_kenobi.html">Obi-Wan</a> et <a href="anakin_skywalker.html">Anakin</a>, et la sénatrice <a href="padme_amidala.html">Amidala</a>, sont capturés sur <a href="../planets/geonosis.html">Géonosis</a>, et condamnés à mort dans une arène de la planète. Ils parviennent cependant à s'échapper grâce à l'arrivée in extremis des <a href="../corporations/jedi.html">Jedi</a> menés par <a href="mace_windu.html">Mace Windua</a>. Durant le combat qui suit entre les forces séparatistes et les Jedi, le chasseur de primes réussit à tuer le maître Jedi Coleman Trebora. Il rentre ensuite dans l'arène où il se retrouve face à Mace Windu. Le combat est cependant bref, le maître Jedi prend rapidement le dessus, et lui tranche la tête d'un coup de sabre laser.
                 </p>
+                <a href="boba_fett.html" class="left">  <img src="../../images/background/icone-fleche-gauche-jaune.png" width="30px" alt="">boba fett</a>
+				<a href="taun_we.html" class="right">  <img src="../../images/background/droite.png" width="30px" alt="">taun we </a>
             </div>
     </main>
     <footer>
