--- a/views/forms/inscription.html
+++ b/views/forms/inscription.html
@@ -58,6 +58,7 @@
             </button>
           </form>
         </div>
+        <img src="../../images/background/ré.gif" class="robot" alt="">
       </div>
     </main>
     <footer>
