--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,7 @@
 					</p>
 				</div>
 				<div class="accueil">
-					<div class="left">
+					<div class="left1">
 						<a href="movies/movie1.html" class="lien">
 							<img class="film" src="../images/movies/poster1.jpg" />
 							<p>Film 1: La Menace Fantôme</p></a
@@ -40,7 +40,7 @@
 							<p>Film 2: L'attaque des clones</p></a
 						>
 					</div>
-					<div class="right">
+					<div class="right1">
 						<a href="movies/movie3.html" class="lien"
 							><img class="film" src="../images/movies/poster3.jpg" />
 							<p>Film 3: La Revanche des Siths</p></a
