FG modification de la partie formulaire d'inscription sur le fichier css et sur le fichier html.

--- a/views/forms/inscription.html
+++ b/views/forms/inscription.html
@@ -14,11 +14,16 @@
     </header>
     <main>
       <h1>Formulaire d'inscription</h1>
+      <h4>Entrez vos informations :</h4>
       <div class="container">
+        
         <div class="inscrire">
-          <h1>Vos informations :</h1>
+          
           <form id="compte">
+            <br/>
+            <br/>
             <div class="np">
+              
               <label
                 >NOM : <br /><input type="text" name="nameu" id="nameu"
               /></label>
@@ -48,7 +53,12 @@
               /></label>
 
               <label
-                >Confirmer <a href="https://www.youtube.com/watch?v=UcRtFYAz2Yo&t=320s" target="_blank" id="oubli_cache">Mot de Passe :</a
+                >Confirmer
+                <a
+                  href="https://www.youtube.com/watch?v=UcRtFYAz2Yo&t=320s"
+                  target="_blank"
+                  id="oubli_cache"
+                  >Mot de Passe :</a
                 ><input type="password" name="pass" id="password"
               /></label>
             </div>
@@ -58,7 +68,7 @@
             </button>
           </form>
         </div>
-        <img src="../../images/background/ré.gif" class="robot" alt="">
+        <img src="../../images/background/ré.gif" class="robot" alt="" />
       </div>
     </main>
     <footer>
