--- a/views/characters/index.html
+++ b/views/characters/index.html
@@ -18,7 +18,7 @@
 			<div class="container">
 				<h1>Les personnages de la trilogie</h1>
 				<h2>Personnages récurrent de la trilogie</h2>
-				<div class="list">
+				<div class="list1">
 					<div class="anakin card1 bien">
 						<a href="anakin_skywalker.html">
 							<img src="../../images/characters/image_centpx/anna_skywalker_resultatredimensionner.webp" border="2px" />
