--- a/views/characters/nute_gunray.html
+++ b/views/characters/nute_gunray.html
@@ -113,6 +113,6 @@
 		<footer>
 			<iframe src="../../views/footer.html" frameborder="0"></iframe>
 		</footer>
-		<a href="easteregg.html#test">-</a>
+		<a href="ptit_oeuf.html#test">-</a>
 	</body>
 </html>
