--- a/views/characters/ptit_oeuf.html
+++ b/views/characters/ptit_oeuf.html
@@ -28,14 +28,18 @@
 			}
 
             #test{
-				margin-left: 40%;
-				margin-right: 40%;
-                width: 20%;
+				margin-left: 20%;
+				margin-right: 20%;
+                width: 60%;
                 text-align: center;
                 position: absolute;
 				animation-name: text;
+				top: 0px;
 				animation-duration: 10s;
                 transform: skew(1deg, 0deg);
+				background-image: url(../../images/background/navettes.png);
+				background-size: cover;
+				background-position: bottom bottom;
 			}
 
 			@keyframes text {
@@ -43,7 +47,7 @@
                     top:  calc(100vh + 1000rem);
 				}
 				to {
-					top: -300px;
+					top: 0;
 				}
 			}
 
@@ -55,8 +59,10 @@
 	</head>
 	<body>
 		<main>
+			
             <img src="https://i.pinimg.com/originals/1d/45/ef/1d45ef47a2f564bfbd3a5587fb33ccca.png" alt="">
 			<div id="test">
+				<h1 style="color: red; font-size: 4rem;">La SuPeR NaVeTtE ! ! ! ! SpATiAl ( De LiDl )</h1>
 				<h1>La Fatal Mevy :</h1>
 				<h2>---- François ----</h2>
 				<h2>---- Marina ----</h2>
